--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "next": "16.0.10",
     "postcss": "^8.5.6",
     "react": "19.2.1",
